--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Alex Biuckians, Armin Soroosh, Dania Salman, Kaipu Liu" />
 
 
-<title>Data Science Project - Loan Approval</title>
+<title>A Data-Driven Study of Loan Approval</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -1601,7 +1601,7 @@ border-radius: 0px;
 
 
 
-<h1 class="title toc-ignore">Data Science Project - Loan Approval</h1>
+<h1 class="title toc-ignore">A Data-Driven Study of Loan Approval</h1>
 <h4 class="author">Alex Biuckians, Armin Soroosh, Dania Salman, Kaipu
 Liu</h4>
 
